--- a/apps/web/src/app.html
+++ b/apps/web/src/app.html
@@ -2,8 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%sveltekit.assets%/favicon.png" />
+    <meta name="robots" content="index,follow" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="icon" href="%sveltekit.assets%/favicon.ico" />
     <link ref="preconnect" href="https://fonts.gstatic.com" />
     <link ref="preconnect" href="https://fonts.googleapis.com" />
     <link
