--- a/apps/calculator-utils/src/app.html
+++ b/apps/calculator-utils/src/app.html
@@ -5,12 +5,18 @@
     <link rel="icon" href="%sveltekit.assets%/favicon.ico" />
     <meta name="viewport" content="width=device-width" />
     <link rel="manifest" crossorigin="use-credentials" href="%sveltekit.assets%/manifest.json" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap"
+      rel="stylesheet"
+    />
     <title>Calculators</title>
     %sveltekit.head%
   </head>
   <body
     data-sveltekit-preload-data="hover"
-    class="bg-gradient-to-b from-purple-700 via-pink-500 to-pink-400"
+    class="bg-linear-to-b from-purple-700 via-pink-500 to-pink-400"
   >
     <div style="display: contents">%sveltekit.body%</div>
   </body>
