fix: move styles to css file

--- a/apps/calculator-utils/src/app.html
+++ b/apps/calculator-utils/src/app.html
@@ -14,10 +14,7 @@
     <title>Calculators</title>
     %sveltekit.head%
   </head>
-  <body
-    data-sveltekit-preload-data="hover"
-    class="bg-linear-to-b from-purple-700 via-pink-500 to-pink-400"
-  >
+  <body data-sveltekit-preload-data="hover">
     <div style="display: contents">%sveltekit.body%</div>
   </body>
 </html>
